[package]
name = "chocolate_libvm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = {version = "0.3", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window']}

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true